<resources>
    <string name="app_name">TimeTracking</string>
    <string name="txt_share">share</string>
    <string name="txt_task_name">Task</string>
    <string name="txt_task_description">Description</string>
    <string name="txt_task_time">Time</string>
    <string name="hint_task_name">Task name</string>
    <string name="title_dialog_creating_task">Create Task</string>
    <string name="hint_description_task">Description</string>
    <string name="txt_start_timer">Start Timer</string>
    <string name="error_empty_field">Error empty field</string>
    <string name="txt_finish_timer">Finish Timer</string>
    <string name="title_timer">Timer</string>
</resources>
