<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/title_dialog_creating_task"
        android:textAppearance="@android:style/TextAppearance.Large" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_task_name"
                android:lines="1"
                android:maxLength="50"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/text_dialog_color"
                tools:text="Name task" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/hint_description_task"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLength="150"
                android:scrollHorizontally="false"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/text_dialog_color"
                tools:text="Some description" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnStartTimer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/txt_start_timer" />
</LinearLayout>